# greenmarket

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/application/: catalog_use_case.py  publication_use_case.py
backend/app/catalog_template/: build.py  build_examples.py  data.py  db_source.py
backend/app/core/: config.py
backend/app/infrastructure/: database.py  models.py
backend/app/mapping/: errors.py  mapper.py  publication_model.py
backend/app/parsing/: excel_parser.py  exceptions.py  google_sheets_parser.py  raw_workbook.py
backend/app/platform/: photo_gateway.py  photo_storage.py  (+1 more)
backend/scripts/: issue_activation_code.py
backend/tests/: conftest.py  test_business_validator.py  test_catalog_api.py  test_catalog_publication_repository.py  test_catalog_template_artifact.py  test_catalog_template_builder.py  test_catalog_template_db_source.py  test_catalog_use_case.py  test_excel_parser.py  test_google_sheets_parser.py  test_hash_calculator.py  test_health.py  test_mapper.py  test_photo_gateway.py  test_photo_storage.py  test_photos_api.py  test_product_group_repository.py  test_product_repository.py  test_publication_mode.py  test_publication_service.py  test_publication_use_case.py  test_publications_api.py  test_seller_access.py  test_seller_activation.py  test_seller_activation_api.py  test_seller_api.py  test_seller_gateway.py  test_seller_product_photo_repository.py  test_seller_product_repository.py  test_semantic_validator.py  test_structure_validator.py  test_validator.py
(+132 files in other folders)
