[project]
name = "greenmarket-backend"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "pydantic-settings",
    "pymysql",
    "openpyxl",
    "python-multipart",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
